src/patterns/breadcrumbs/_breadcrumbs.scss
/*********************************/
/* BEGIN Pattern: breadcrumbs    */
/*********************************/

.breadcrumbs {
    margin: 0 0 1em 0;
    padding: 0;

    li {
        display: inline;
        padding-right: 0.35em;
    }

    // Add 'greater than' before each element, except first.
    li:before {
        content: ">";
        padding-right: 0.35em;
    }

    li:first-child:before {
        content: "";
        padding-right: 0;
    }
}

// This will override above settings to allow for collapsing margins with subsequent content blocks
.breadcrumbs--wrapper {
    margin-top: 1em;
    margin-bottom: 1em;

    .content {
        margin-top: 0;
        margin-bottom: 0;
    }

    .breadcrumbs {
        margin-bottom: 0;
    }
}

/*********************************/
/* END Pattern: breadcrumbs      */
/*********************************/

